# osal

./: README.md  component.mk
core/: osal.c  osal.h  osal_api.h  osal_config.h  osal_mem.c  osal_mem.h  osal_msg_queue.c  osal_msg_queue.h  osal_task.h  osal_timer.c  osal_timer.h  osal_typedef.h
example/: Makefile  main.c  osal_main.c
example/linux_simulator/: .gitignore  CMakeLists.txt  Makefile  main.c
hal/: osal_hal.c  osal_hal.h  osal_hal_timer.c  osal_hal_timer.h
osal/: CMakeLists.txt  FileLists.cmake  component.mk  osal_export.h  移植说明.md
osal/core/: osal.c  osal.h  osal_config.h  osal_list.c  osal_list.h  osal_mem.c  osal_timer.c  osal_timer.h  osal_typedef.h
osal/hal/: osal_hal.c  osal_hal.h  osal_hal_linux.c  osal_hal_microblaze.c  osal_hal_zynq_a9.c
